# emailsnap-service

./: README.md  docker-compose.yml
Database/: 0001-email-log.sql  0002-email-summary.sql  0003-attachment-summary.sql  README.md  example.docker-compose.yml
service/: Dockerfile  README.md  pyproject.toml
service/app/: app_logger.py  db.py  db_repo.py  email_processor.py  env.py  image_utils.py  llm_chain.py  main.py  model.py  s3_repo.py  ses_repo.py  sqs_consumer.py
service/scripts/: gunicorn_conf.py
ssh/: .gitignore  README.md
superset/: Dockerfile
terraform/: .terraform.lock.hcl  README.md  cloudfront.tf  gw.tf  init.tf  main.tf  output.tf  rds.tf  variables.tf
web-app/: README.md  package-lock.json  package.json
web-app/public/: index.html  manifest.json
web-app/src/: App.css  App.js  Home.css  Home.js  Page.css  PrivacyPolicy.js  index.js
