[tool.poetry]
name = "Email Snail"
version = "0.1.0"
description = "Email Snail"
authors = ["Igor Steblii <igor.steblii@emailsnail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
boto3 = "^1.35.20"
langchain = "^0.3.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.0"
gunicorn = "^23.0.0"
mysqlclient = "^2.2.4"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
deptry = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
